-----------
v4.2.24-git
-----------



-------
v4.2.23
-------

[jan] Officially support PHP 7.
[jan] Fix time offsets when importing CSV data with two-digit years.
[jan] Fix updating and deleting events from external CalDAV servers
      (martin1@k0k.net, Bug #14021).
[jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).


-------
v4.2.22
-------

[jan] SECURITY: Fix open redirects.
[mjr] Prevent broken iCalendar files from causing fatal errors (Bug #14672).
[jan] Work around calendar servers advertising as CalDAV-capable, but ignoring
      CalDAV requests (Bug #14662).
[jan] Fix displaying yesterday's event in Prior Events portal block
      (admin@layertec.de, Bug #14638).


-------
v4.2.21
-------

[mjr] Don't hide the reservee's identity on the resource calendar (Bug #14609).


-------
v4.2.20
-------

[mjr] Fix saving sync preference when no default calendar exists (Bug #14585).
[mjr] Fix display of date in ITIP_CANCEL notifications of deleted instances of
      recurring events (PR: 214, almarin@um.es).


-------
v4.2.19
-------

[mjr] Fix allowing ics import on when user has edit permissions on a shared
      calendar (Bug #14501).
[jan] Disallow setting of creator permissions too if sharing with world is
      disabled.
[jan] Split shared users by linebreaks too.


-------
v4.2.18
-------

[mjr] Fix potential memory issue with really long events (Bug #14453).
[mjr] Fix setting DELETE permissions (Bug #14447).
[mjr] More fixes and improvements related to preventing empty date values.
[jan] Fix losing shared users when adding invalid user name (Bug #14415).
[mjr] Fix displaying tag search results (Bug #14412).
[jan] Fix sender of event change notification messages.


-------
v4.2.17
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix issue where it is possible to save an event with an empty start or
      end date on some browsers.
[mjr] Require Horde_Perms::DELETE for including a calendar as sync-able.